# sovereign-term

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/sovereign-agent/: Cargo.toml
crates/sovereign-agent/src/: lib.rs
crates/sovereign-core/: Cargo.toml
crates/sovereign-core/src/: lib.rs
crates/sovereign-fs/: Cargo.toml
crates/sovereign-fs/src/: lib.rs
crates/sovereign-git/: Cargo.toml
crates/sovereign-git/src/: lib.rs
crates/sovereign-plugin/: Cargo.toml
crates/sovereign-plugin/src/: lib.rs
crates/sovereign-terminal/: Cargo.toml
crates/sovereign-terminal/src/: lib.rs
crates/sovereign-ui/: Cargo.toml
crates/sovereign-ui/src/: lib.rs
docs/architecture/: block-engine.md  filesystem-plugin.md  git-plugin.md  native-surface.md  overview.md
docs/product/: interface-system.md  privacy-model.md  roadmap.md
examples/config/: omlx.toml
examples/plugins/: git-helper.toml
src/: main.rs
