[package]
name = "sovereign-core"
version = "0.1.0"
description = "Core configuration, privacy contracts, and product primitives for Sovereign Term."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
