[package]
name = "sovereign-plugin"
version = "0.1.0"
description = "Plugin manifest and permission model for Sovereign Term."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
